--- a/intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html
+++ b/intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html
@@ -55,45 +55,47 @@
         <p class="article-date">۰۸/۲۴/۲۰۲۳</p>
         <div class="article-text-container">
             <p class="article-text">
-                فیل دورست به یاد می آورد که پس از پاشیدن یک ماده شیمیایی از یک ماشین ظرفشویی تجاری در چشمانش، پنجه به صورتش زد که باعث "وصف ناپذیرترین دردی که تا به حال احساس کرده ام - همیشه، تا کنون."
+                تزریق سلول‌های بنیادی امیدی را به افراد دارای آسیب شدید چشمی می‌دهد. فیل دورست در سال ۲۰۱۷ تجربه‌ای آسیب‌دهنده داشت که در آن یک ماده شیمیایی از دستگاه شستشوی ظرفشویی تجاری وارد چشم‌هایش شد، باعث درد بی‌نظیری شد که «برای من احساس ناشدنی ترین درد را ایجاد کرد - هرگز، هرگز، هرگز».
 
-چشم چپ او بار سنگین حادثه کار در سال 2017 را متحمل شد، که بینایی او را ربود، او را قادر به تحمل نور و چهار تا پنج سردرد خوشه ای در روز کرد.
+چشم چپ او اثر اصلی حادثه کاری سال ۲۰۱۷ بود که باعث از دست دادن بینایی او، تحمل نور ناپذیری و ایجاد چهار تا پنج سردرد خوشه‌ای در هر روز شد.
 
-سپس او تحت یک روش آزمایشی قرار گرفت که هدف آن درمان آسیب های شدید در یک چشم با سلول های بنیادی چشم دیگر است.
+سپس او از یک روش آزمایشی که به منظور درمان آسیب‌های شدید در یک چشم با سلول‌های بنیادی از دیگر چشم انجام می‌شود، عبور کرد.
 
-او گفت: «من با سردردهای ناتوان کننده کاملاً نابینا شدم و به این فکر کردم که آیا می توانم یک روز دیگر بروم - مثل اینکه واقعاً فکر می کنم دیگر نمی توانم این کار را انجام دهم» تا آنقدر خوب ببینم که بتوانم رانندگی کنم و از مکان های تاریک به معنای واقعی و مجازی بیرون آمدم و خفه شد.
+«از یک وضعیتی که کاملاً کور و دچار سردردهای افسرده کننده و دستخوش تردید در مورد اینکه آیا می‌توانم یک روز دیگر بمانم - واقعاً به این فکر می‌کنم که نمی‌توانم این کار را بکنم» به اندازه کافی بهبود پیدا کردم تا بتوانم به اندازه کافی خوب ببینم تا بتوانم رانندگی کنم و از جاهای تاریک به معنای واقعی و مجازی خارج شوم، او گفت و گریه می‌کند.
 
-این مرد 51 ساله اهل هوم وود، آلاباما، یکی از چهار بیمار بود که به عنوان بخشی از اولین مطالعه ایالات متحده برای آزمایش این روش، که روزی می‌تواند به هزاران نفر کمک کند، پیوند سلول‌های بنیادی دریافت کرد. اگرچه گاهی اوقات به درمان اضافی نیاز است، متخصصان می‌گویند پیوند سلول‌های بنیادی به افرادی که گزینه‌های کمی یا هیچ گزینه دیگری ندارند، امید می‌دهد.
+این مرد ۵۱ ساله از هوموود، آلاباما، یکی از چهار بیمار بود که به عنوان بخشی از اولین مطالعه آزمایشی ایالات متحده برای آزمایش این تکنیک شرکت کردند، که ممکن است روزی به هزاران نفر کمک کند. اگرچه ممکن است نیاز به درمان‌های اضافی وجود داشته باشد، متخصصان می‌گویند تزریق سلول‌های بنیادی امیدواری به افرادی با کمترین گزینه‌های درمانی ممکن می‌دهد.
 
-نتایج این تحقیق در مراحل اولیه روز جمعه در مجله Science Advances منتشر شد و اکنون یک مطالعه بزرگتر در حال انجام است.
+نتایج تحقیقات در مراحل اولیه پژوهش در روز جمعه در مجله Science Advances منتشر شد و یک مطالعه بزرگتر در حال حاضر در حال انجام است.
 
-این روش برای درمان "کمبود سلول های بنیادی لیمبال"، یک اختلال قرنیه که می تواند پس از سوختگی های شیمیایی و سایر آسیب های چشمی رخ دهد، طراحی شده است. بیماران بدون سلول‌های لیمبال، که برای بازسازی و حفظ خارجی‌ترین لایه قرنیه ضروری هستند، نمی‌توانند تحت پیوند قرنیه قرار گیرند که معمولاً برای بهبود بینایی استفاده می‌شود.
+این روش برای درمان «کمبود سلول‌های بنیادی لیمبال»، اختلال کرنی که ممکن است پس از سوختگی‌های شیمیایی و سایر آسیب‌های چشمی رخ دهد، طراحی شده است. بیماران بدون سلول‌های لیمبال، که برای تجدید و حفظ لایه بیرونی کرنی ضروری هستند، نمی‌توانند از پیوند کرنی استفاده کنند که به طور معمول برای بهبود بینایی استفاده می
 
-دکتر اولا جورکوناس، چشم پزشک در Mass Eye and Ear در بوستون که محقق اصلی این مطالعه بود، گفت که این روش تجربی شامل گرفتن نمونه برداری کوچک از سلول های بنیادی از چشم سالم، سپس گسترش و رشد آنها بر روی پیوند در یک پیوند است. آزمایشگاه در موسسه سرطان دانا فاربر در بوستون.
+‌شود.
 
-چند هفته بعد، آنها برای پیوند به چشم آسیب دیده بازگردانده می شوند. دورست اولین بیماری بود که تحت این روش قرار گرفت.
+دکتر اولا یورکوناس، یک چشم‌پزشک در مرکز چشم و گوش Mass در بوستون که محقق اصلی مطالعه بود، گفت که تکنیک آزمایشی به اخذ بیوپسی کوچکی از سلول‌های بنیادی از چشم سالم و سپس گسترش و رشد آن‌ها روی یک پیوند در آزمایشگاه در مؤسسه سرطانی دانا-فاربر در بوستون انجام می‌شود.
 
-جورکوناس گفت: بخش بزرگی از آن این است که ما از بافت خود بیمار استفاده می کنیم، نه بافت اهدایی که بدن ممکن است رد کند.
+چند هفته بعد، آن‌ها به طور انتقال می‌یابند تا در چشم آسیب‌دیده پیوند داده شوند. دورست اولین بیمار بود که عمل را تجربه کرد.
 
-او گفت این روش بهتر از یک روش متفاوت است که یک قطعه بسیار بزرگ از سلول های بنیادی را از یک چشم سالم برای استفاده در چشم آسیب دیده می گیرد - اما خطر آسیب رساندن به چشم خوب را دارد.
+او گفت: «قسمت بزرگی از آن این است که از بافت خود بیمار استفاده می‌کنیم» نه بافت کمک‌کننده‌ای که بدن ممکن است رد کند، یورکوناس گفت.
 
-هر دو چشم دورست در این تصادف آسیب دیده بود که مدیر سابق شرکت شیمیایی در حال بازدید از مشتری بود که مشکل ماشین ظرفشویی داشت. به مدت شش تا هشت ماه، دید کلی او به حدی بد بود که همسر یا پسرش مجبور بودند او را به اطراف هدایت کنند. اما چشم راست او کمتر از چپ آسیب دید و می توانست سلول های بنیادی پیوند را فراهم کند.
+او گفت که این روش بهتر از یک روش متفاوت است که به طور جداگانه یک قطعه بزرگ از سلول‌های بنیادی را از چشم سالم برای استفاده در یک چشم آسیب‌دیده می‌گیرد - اما خطر تخریب چشم خوب را به همراه دارد.
 
-جورکوناس، که همچنین وابسته به دانشکده پزشکی هاروارد است، گفت که عمل جراحی دورست در سال 2018 اوج تقریباً دو دهه تحقیق بود، "بنابراین ما خوشحالی و هیجان بی‌نظیری را برای انجام آن احساس کردیم."
+دو چشم او در حین حادثه آسیب دیده بودند، که در حالی رخ داد که مدیر سابق شرکت شیمیایی در حال بازدید از مشتری با مشکلات ماشین ظرفشویی بود. به مدت شش تا هشت ماه، دید کلی او به قدری بد بود که همسر یا پسر او باید او را هدایت کنند. اما چشم راستش کمتر آسیب دیده بود و می‌توانست سلول‌های بنیادی را برای پیوند درمانی ارائه دهد.
 
-تمام بیماران در این مطالعه سطوح قرنیه خود را بازسازی کردند. دورست و یک بیمار دیگر توانستند قرنیه مصنوعی پیوند بزنند، در حالی که دو نفر دیگر تنها با پیوند سلول های بنیادی، بینایی بسیار بهبود یافته ای را گزارش کردند. بیمار پنجم این روش را انجام نداد زیرا سلول های بنیادی قادر به گسترش کافی نبودند.
+یورکوناس که همچنین با دانشکده پزشکی هاروارد همکاری دارد، گفت عملیات دورست در سال ۲۰۱۸ نتیجه دو دهه تحقیقات تقریباً بود، "بنابراین احساس شادی و هیجان بزرگی داشتیم که بالاخره انجام دادیم".
 
-در این مرحله، دورست گفت که دید در چشم راست او تقریباً کامل است، اما دید در چشم چپ او تار است. او برای رسیدگی به آن در ماه سپتامبر برای یک رویه متفاوت برنامه ریزی کرده است.
+تمام بیماران مشاهده کردند که سطح کرنی‌های آن‌ها ترمیم شده است. دورست و یک بیمار دیگر سپس قادر به دریافت پیوندهای مصنوعی کرنی شدند، در حالی که دو بیمار دیگر بهبود چشم‌انداز خود را با تنها پیوند سلول‌های بنیادی گزارش کردند. بیمار پنجم این روش را دریافت نکرد زیرا سلول‌های بنیادی به طور مناسب توسعه نیافتند.
 
-جورکوناس تخمین می زند که حدود 1000 نفر در ایالات متحده در سال می توانند به طور بالقوه از این نوع پیوند سلول های بنیادی که در ژاپن نیز مورد مطالعه قرار گرفته است، بهره مند شوند.
+در این مرحله، دورست گفت که دید چشم راستش تقریباً کامل است اما دید چشم چپش مبهم است؛ او برنامه دارد تا در ماه سپتامبر به یک روش متفاوت برای رفع این مشکل بپردازد.
 
-دکتر تونگ شن، استاد چشم پزشکی در دانشگاه واشنگتن که در این تحقیق شرکت نداشت، گفت: «قطعاً یک نیاز بالینی برآورده نشده برای این تلاش وجود دارد - شکی نیست. وی افزود که پزشکان در حال حاضر منبع قابل اعتمادی از سلول های بنیادی لیمبال کشت شده ندارند.
+یورکوناس تخمین می‌زند که در حدود ۱۰۰۰ نفر در سال در ایالات متحده از این نوع پیوند سلول‌های بنیادی بهره‌مند شوند، که همچنین در ژاپن مورد مطالعه قرار گرفته است.
 
-محققان در حال نهایی کردن مرحله بعدی کارآزمایی بالینی هستند که شامل 15 بیمار است. یکی نیک خاروفه است که چشم چپش در سال 2020 مجروح شد. او در خیابان مشغول تماشای آتش بازی بود که جرقه ای به کره چشمش خورد.
+«بی‌تردید نیاز بالینی برای این تلاش وجود دارد - هیچ سوالی نیست»، گفت دکتر توئنگ شن، استاد چشم‌پزشکی دانشگاه واشنگتن که در مطالعه شرکت نکرده بود. او افزود که دکتران در حال حاضر منبع قابل اعتمادی از سلول‌های بنیادی لیمبال کشت ندارند.
 
-خاروفه برای شرکت در این مطالعه از کالیفرنیا به بوستون نقل مکان کرد و این مشاور املاک 26 ساله می تواند به اندازه کافی خوب ببیند که بتواند با یک هواپیمای کوچک پرواز کند.
+محققان در حال تکمیل مرحله بعدی آزمایش بالینی هستن
 
-اگرچه او از برنامه‌های خلبان تجاری شدن منصرف شده است، «هنوز هر وقت به کالیفرنیا برمی‌گردم پرواز می‌کنم. من آن را دوست دارم، "او گفت. من واقعاً سپاسگزارم که آنها به من این فرصت را دادند که بخشی از محاکمه باشم زیرا واقعاً به من کمک کرد.»
+د که شامل ۱۵ بیمار است. یکی از آن‌ها نیک خاروفه است که چشم چپ او در سال ۲۰۲۰ آسیب دید. او در حالی که شهروند املاک ۲۶ ساله از کالیفرنیا به بوستون رفت تا در مطالعه شرکت کند، می‌تواند به اندازه کافی خوب ببیند تا بتواند یک هواپیمای کوچک را پرواز دهد.
+
+او گفت: «اگرچه از طرح‌های تبدیل شدن به خلبان تجاری دست برداشتم، اما هنوز هر وقت به کالیفرنیا برگشتم، هنوز پرواز می‌کنم. دوست دارم»، او گفت: «از واقعاً ممنونم که به من این فرصت را دادند که بخشی از آزمایش باشم زیرا واقعاً به من کمک کرده است».
             </p>
         </div>
         <p class="article-byline">
