uploaded new article

--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
             <img src="intl/intlimages/eyeimage.jpg" alt="مقاله ۱" />
         </a>
         </div>
+
+        <a href="intl/intlarticles/Artificial-intelligence-data-linked-to-scent.html" class="article">
+            <h2>یک لالایی کلاسیک به کاهش درد نوزادان در هنگام نیش پاشنه کمک کرد</h2>
+            <p>کاهش درد نوزادان برای رشد عصبی و درک درد بعدی مهم است</p>
+            <img src="intl/intlimages/pexels-rene-asmussen-325690.jpg" alt="مقاله ۱" />
+        </a>
+        </div>
         <!-- Add more article cards as needed -->
 
 
