--- a/intl/international.html
+++ b/intl/international.html
@@ -94,6 +94,16 @@
             </a>
             </div>
 
+         <div class="article-container">
+
+                <a href="intlarticles/Artificial-intelligence-data-linked-to-scent.html" class="article">
+                    <h2>یک لالایی کلاسیک به کاهش درد نوزادان در هنگام نیش پاشنه کمک کرد</h2>
+                    <p>کاهش درد نوزادان برای رشد عصبی و درک درد بعدی مهم است</p>
+                    <img src="intlimages/pexels-rene-asmussen-325690.jpg" alt="مقاله ۱" />
+                </a>
+                </div>
+
+
 
         </div>
        
