--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="article-container">
 
         <a href="intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html" class="article">
-            <h2>سلول های بنیادی یک چشم در بهبود جراحات چشم دیگر امیدوار کننده هستند</h2>
+            <h2>یک لالایی کلاسیک به کاهش درد در نوزادان کمک کرد</h2>
             <p></p>
             <img src="intl/intlimages/eyeimage.jpg" alt="مقاله ۱" />
         </a>
