--- a/intl/intlarticles/Artificial-intelligence-data-linked-to-scent.html
+++ b/intl/intlarticles/Artificial-intelligence-data-linked-to-scent.html
@@ -10,7 +10,7 @@
 
         <meta property="og:site_name" content="Ibn Sina News" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="یک لالایی کلاسیک به کاهش درد نوزادان در هنگام نیش پاشنه کمک کرد" />
+<meta property="og:title" content="یک لالایی کلاسیک به کاهش درد در نوزادان کمک کرد" />
 <meta property="og:description" content="کاهش درد نوزادان برای رشد عصبی و درک درد بعدی مهم است" />
 <meta property="og:url" content="https://avicennanews.me/intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html" />
 <meta property="og:image" content="https://avicennanews.me/intl/intlimages/pexels-rene-asmussen-325690.jpg">
@@ -18,10 +18,10 @@
 <meta name="twitter:card" content="Vaccine photo">
 <meta name="twitter:site" content="Ibn Sina News">
 <meta name="twitter:creator" content="Science News, Ibn Sina News">
-<meta name="twitter:title" content="یک لالایی کلاسیک به کاهش درد نوزادان در هنگام نیش پاشنه کمک کرد">
+<meta name="twitter:title" content="یک لالایی کلاسیک به کاهش درد در نوزادان کمک کرد">
 <meta name="twitter:description" content="کاهش درد نوزادان برای رشد عصبی و درک درد بعدی مهم است">
 <meta name="twitter:image" content="https://avicennanews.me/intl/intlimages/pexels-rene-asmussen-325690.jpg">
-    <title>یک لالایی کلاسیک به کاهش درد نوزادان در هنگام نیش پاشنه کمک کرد</title>
+    <title>یک لالایی کلاسیک به کاهش درد در نوزادان کمک کرد</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
 
@@ -51,7 +51,7 @@
         <div class="article-image">
             <img src="https://www.avicennanews.me/intl/intlimages/pexels-rene-asmussen-325690" alt="تصویر مقاله ۱" />
         </div>
-        <h1 class="article-title">یک لالایی کلاسیک به کاهش درد نوزادان در هنگام نیش پاشنه کمک کرد</h1>
+        <h1 class="article-title">یک لالایی کلاسیک به کاهش درد در نوزادان کمک کرد</h1>
         <p class="article-date">۱ سپتامبر ۲۰۲۳</p>
         <div class="article-text-container">
             <p class="article-text">
