--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         </div>
         <!-- Add more article cards as needed NARROW STARTS HERE-->
 
+
+
         <div class="narrow-aisle">
 
     
@@ -118,6 +120,7 @@
             <img src="intl/intlimages/eyeimage.jpg" alt="مقاله ۱" />
         </a>
         </div>
+        <div class="article-container">
 
         <a href="https://avicennanews.me/intl/intlarticles/newborn-baby-gets-healed-with-music.html" class="article">
             <h2>یک لالایی کلاسیک به کاهش درد در نوزادان کمک کرد</h2>
@@ -160,7 +163,7 @@
                     <img src="covid/COVIDimages/covidimage2.jpg" alt="مقاله ۱" />
                 </a>
                 </div>
-
+                </div>
         <!-- Add more article cards as needed -->
 
 
