--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="about.css"> <!-- Assuming your CSS file is named styles.css -->
+    <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named styles.css -->
 </head>
 <body>
     <div class="header">
@@ -27,6 +27,10 @@
             </p>
             <!-- You can add more paragraphs and content as needed -->
         </div>
+    </div>
+
+    <div class="content-wrapper">
+        <!-- Content goes here -->
     </div>
 
     <div class="footer">
