--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="about.css"> <!-- Assuming your CSS file is named styles.css -->
+    <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named styles.css -->
 </head>
 <body>
     <div class="header">
@@ -29,22 +29,14 @@
         </div>
     </div>
 
-    <div class="content-wrapper">
-        <!-- Content goes here -->
-    </div>
-
     <div class="footer">
-        <div class="footer-left">
+        <div class="footer-content">
             <img src="footer-logo.png" alt="Footer Logo" class="footer-logo">
-        </div>
-        <div class="footer-right">
             <ul class="footer-categories">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="articles.html">Articles</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
-            <button class="about-button">About</button>
-            <button class="email-button">Email</button>
         </div>
     </div>
 </body>
