--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                 مسئولان در نظر دارند جایزه ادبی را روز پنجشنبه و به دنبال آن جایزه صلح را روز جمعه اعلام کنند. جایزه اقتصاد روز دوشنبه اهدا می شود.
             </p>
         </div>
-        <p class="article-byline">
+        <!--  <p class="article-byline">
             <a href="">تصویر: Steven Senne/AP</p> 
         <p class="article-byline">
              <a href="">E-mail:ibnsinanews@gmail.com</p>
@@ -87,7 +87,8 @@
 <p class="article-byline">
     <a href="">
                 <button class="share-button" onclick="copyLink()">اشتراک‌گذاری صفحه</button>
-</p>
+</p>  -->
+       
             </div>
     <script>
         function copyLink() {
