--- a/usa/usa.html
+++ b/usa/usa.html
@@ -148,7 +148,7 @@
 <script>
     document.getElementById("small-about-button").addEventListener("click", function () {
         // Redirect the user to the "about.html" page
-        window.location.href = "about.html";
+        window.location.href = "../about.html";
     });
 
     document.getElementById("small-email-button").addEventListener("click", function () {
