--- a/usa/usa.html
+++ b/usa/usa.html
@@ -107,7 +107,7 @@
             <li><a href="../usa/usa.html">ایالات متحده</a></li>
             <!-- Add more categories as needed -->
         </ul>
-        <a href="../about.html" class="about-button">درباره ما</a>
+        <a href="https://www.avicennanews.me/about.html" class="about-button">درباره ما</a>
 
         <button id="email-button" class="email-button">به ما ایمیل بزنید</button>
     </div>
@@ -148,7 +148,7 @@
 <script>
     document.getElementById("small-about-button").addEventListener("click", function () {
         // Redirect the user to the "about.html" page
-        window.location.href = "../about.html";
+        window.location.href = "https://www.avicennanews.me/about.html";
     });
 
     document.getElementById("small-email-button").addEventListener("click", function () {
