--- a/intl/international.html
+++ b/intl/international.html
@@ -189,7 +189,7 @@
 <script>
     document.getElementById("small-about-button").addEventListener("click", function () {
         // Redirect the user to the "about.html" page
-        window.location.href = "../about.html";
+        window.location.href = "https://www.avicennanews.me/about.html";
     });
 
     document.getElementById("small-email-button").addEventListener("click", function () {
