trying to adapt to stup bug

--- a/covidabout.html
+++ b/covidabout.html
@@ -34,16 +34,16 @@
     <div class="header">
         <a href="index.html" class="logo-link">
             <div class="logo">
-                <img src="../images/articlelogo.jpeg" />
+                <img src="images/articlelogo.jpeg" />
             </div>
             <span></span>
             
         </a>
         <div class="subject-tabs">
             <a href="covid/covid.html" class="subject-tab">کووید-۱۹</a>
-            <a href="../intl/international.html" class="subject-tab">سلامت بین‌المللی</a>
-            <a href="../iran/iran.html" class="subject-tab">ایران</a>
-            <a href="../usa/usa.html" class="subject-tab">ایالات متحده</a>
+            <a href="intl/international.html" class="subject-tab">سلامت بین‌المللی</a>
+            <a href="iran/iran.html" class="subject-tab">ایران</a>
+            <a href="usa/usa.html" class="subject-tab">ایالات متحده</a>
         </div>
     </div>
             <!-- <div class="article-image">
