changed title and tried to fix footer
changed title and tried to fix footer

--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 <meta name="twitter:title" content="درمورد من">
 <meta name="twitter:description" content="درمورد من">
 <meta name="twitter:image" content="">
-    <title></title>
-    <meta charset="UTF-8">
+<title>اخبار  ابن سینا</title>
+<meta charset="UTF-8">
     <link rel="stylesheet" href="art.css">
 
 </head>
