Bug fixes, New article launched. Enceladus

--- a/index.html
+++ b/index.html
@@ -91,7 +91,15 @@
                     <img src="intl/intlimages/nobelprize.jpg" alt="مقاله ۱" />
                 </a>
                 </div>
+                <div class="article-container">
 
+                    <a href="intl/intlarticles/Enceladus-toxic-gas-life.html" class="article">
+                        <h2>یک گاز سمی که می تواند به تخم ریزی حیات کمک کند در انسلادوس پیدا شده است</h2>
+                        <p></p>
+                        <img src="intl/intlimages/enceladus-pic.jpg" alt="مقاله ۱" />
+                    </a>
+                    </div>
+    
 
         </div>
         <!-- Add more article cards as needed NARROW STARTS HERE-->
