--- a/intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html
+++ b/intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html
@@ -21,7 +21,7 @@
 <meta name="twitter:title" content="سلول های بنیادی یک چشم در بهبود جراحات چشم دیگر امیدوار کننده هستند">
 <meta name="twitter:description" content="">
 <meta name="twitter:image" content="https://avicennanews.me/intl/intlimages/eyeimage.jpg">
-    <title>FDA ایالات متحده درمان سرطان خون فایزر را تایید کرده است</title>
+    <title>کاشت چشم سلول های بنیادی باعث بهبود بینایی می شود.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
 
