Bug fixes for about me enceladus

--- a/intl/intlarticles/Enceladus-toxic-gas-life.html
+++ b/intl/intlarticles/Enceladus-toxic-gas-life.html
@@ -110,7 +110,7 @@
             <li><a href="../../usa/usa.html">ایالات متحده</a></li>
             <!-- Add more categories as needed -->
         </ul>
-        <a href="about.html" class="about-button">درباره ما</a>
+        <a href="../../about.html" class="about-button">درباره ما</a>
 
         <button id="email-button" class="email-button">به ما ایمیل بزنید</button>
     </div>
