All edits, made new article

--- a/intl/international.html
+++ b/intl/international.html
@@ -97,6 +97,15 @@
                 </a>
                 </div>
 
+                <div class="article-container">
+
+                    <a href="intlarticles/mercury-salt-carved-terrains-glacier-features.html" class="article">
+                        <h2>نمک ممکن است زمین های عطارد، از جمله ویژگی های یخچال مانند را کنده باشد</h2>
+                        <p></p>
+                        <img src="intlimages/merucry-article.jpg" alt="مقاله ۱" />
+                    </a>
+                    </div>
+
 
         <div class="article-container">
 
