--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
     
 
         </div>
-        <!-- Add more aricle cards as needed NARROW STARTS HERE-->
+        <!-- Add more article cards as needed NARROW STARTS HERE
 
         655
         23 55 55 45 94 99 12 99 89 32
         0
-        
+    -->
 
         <div class="narrow-aisle">
 
