New article, Covid study article
New article, Covid study article

--- a/intl/international.html
+++ b/intl/international.html
@@ -55,6 +55,14 @@
     <div class="articles">
         <div class="wide-aisle">
 
+            <div class="article-container">
+
+                <a href="intlarticles/Controversial-COVID-study-that-promoted-unproven-treatment retracted-after-four-year-saga.html" class="article">
+                    <h2>مطالعه بحث‌برانگیز کووید که درمان اثبات‌نشده را ترویج می‌کرد، پس از حماسه چهار ساله پس رفت</h2>
+                    <p></p>
+                    <img src="intlimages/Covid-study.webp" alt="مقاله ۱" />
+                </a>
+                </div>
         <div class="article-container">
 
         <a href="intlarticles/IntlArt1.html" class="article">
