--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
     <div class="articles">
         <div class="wide-aisle">
          
+
+            <div class="article-container">
+
+                <a href="intl/intlarticles/Controversial-COVID-study-that-promoted-unproven-treatment retracted-after-four-year-saga.html" class="article">
+                    <h2>مطالعه بحث‌برانگیز کووید که درمان اثبات‌نشده را ترویج می‌کرد، پس از حماسه چهار ساله پس رفت</h2>
+                    <p></p>
+                    <img src="intl/intlimages/Covid-study.webp" alt="مقاله ۱" />
+                </a>
+                </div>
+        <div class="article-container">
+
+
+
             <div class="article-container">
                 <a href="intl/intlarticles/IntlArt1.html" class="article">
                     <h2>اداره غذا و داروی ایالات متحده (FDA) موافقت شتاب‌پذیری را برای درمان بیماری آلزایمر اعطا کرد.</h2>
