--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
 
         <div class="narrow-aisle">
 
+            <div class="article-container">
+
+                <a href="usa/USAarticles/USart3.html" class="article">
+                    <h2>سلول‌های بنیادی به کلینیک می‌روند: درمان‌های سرطان، دیابت و بیماری پارکینسون می‌تواند به زودی به اینجا برسد </h2>
+                    <p></p>
+                    <img src="usa/USAimages/surgeon-image.jpg" alt="" />
+                </a>
+                </div>
     
             <div class="article-container">
 
