--- a/usa/usa.html
+++ b/usa/usa.html
@@ -76,6 +76,11 @@
             <h2>هشدارهای مربوط به کووید برای برخی همچنان ادامه دارد، حتی با پایان یافتن وضعیت اضطراری فدرال</h2>
             <p>در حالی که دستورات و قرنطینه‌ها مدت‌هاست که از بین رفته‌اند، این ویروس وجود ندارد و برای برخی آمریکایی‌ها ماسک نیز وجود ندارد.</p>
             <img src="USAimages/USphoto2.jpeg" alt="مقاله ۱" />
+
+            <a href="USAarticles/USart3.html" class="article">
+                <h2>سلول‌های بنیادی به کلینیک می‌روند: درمان‌های سرطان، دیابت و بیماری پارکینسون می‌تواند به زودی به اینجا برسد </h2>
+                <p></p>
+                <img src="USAimages/surgeon-image.jpg" alt="مقاله ۱" />
         </a>
         </div>
         </div>
