--- a/usa/usa.html
+++ b/usa/usa.html
@@ -66,6 +66,18 @@
             <img src="USAimages/USarticle1image.jpg" alt="مقاله ۱" />
         </a>
         </div>
+
+        <div class="article-container">
+
+            <a href="USAarticles/USart4.html" class="article">
+                <h2>آنچه کارشناسان آنفولانزای پرندگان در سال 2025 به دنبال آن هستند</h2>
+                <p></p>
+                <img src="USAimages/USart4.webp" alt="مقاله ۱" />
+            </a>
+            </div>
+
+
+
         </div>
 
 
