--- a/usa/USAarticles/USart4.html
+++ b/usa/USAarticles/USart4.html
@@ -12,15 +12,15 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="آنچه کارشناسان آنفولانزای پرندگان در سال 2025 به دنبال آن هستند" />
 <meta property="og:description" content="" />
-<meta property="og:url" content="https://avicennanews.me/intl/intlarticles/USart4.html" />
-<meta property="og:image" content="https://avicennanews.me/intl/intlimages/USart4.webp">
+<meta property="og:url" content="https://avicennanews.me/usa/USAarticles/USart4.html" />
+<meta property="og:image" content="https://avicennanews.me/usa/USAimages/USart4.webp">
 
 <meta name="twitter:card" content="Vaccine photo">
 <meta name="twitter:site" content="Ibn Sina News">
 <meta name="twitter:creator" content="Science News, Ibn Sina News">
 <meta name="twitter:title" content="آنچه کارشناسان آنفولانزای پرندگان در سال 2025 به دنبال آن هستند">
 <meta name="twitter:description" content="">
-<meta name="twitter:image" content="https://avicennanews.me/intl/intlimages/USart4.webp">
+<meta name="twitter:image" content="https://avicennanews.me/usa/USAimages/USart4.webp">
     <title>آنچه کارشناسان آنفولانزای پرندگان در سال 2025 به دنبال آن هستند</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
@@ -49,7 +49,7 @@
     
     <div class="article-container">
         <div class="article-image">
-            <img src="https://www.avicennanews.me/intl/intlimages/USart4.html" alt="تصویر مقاله ۱" />
+            <img src="https://www.avicennanews.me/usa/USAimages/USart4.html" alt="تصویر مقاله ۱" />
         </div>
         <h1 class="article-title">آنچه کارشناسان آنفولانزای پرندگان در سال 2025 به دنبال آن هستند</h1>
         <p class="article-date">16 ژانویه 2025</p>
