--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
          
             <div class="article-container">
 
+                <a href="intl/intlarticles/Expert-Advice-On-Anti-Depressents.html" class="article">
+                    <h2>ترک داروهای ضد افسردگی</h2>
+                    <p></p>
+                    <img src="intl/intlimages/HarvardArticle.jpg" alt="مقاله ۱" />
+                </a>
+                </div>
+
+            <div class="article-container">
+
                 <a href="intl/intlarticles/Controversial-COVID-study-that-promoted-unproven-treatment retracted-after-four-year-saga.html" class="article">
                     <h2>مطالعه بحث‌برانگیز کووید که درمان اثبات‌نشده را ترویج می‌کرد، پس از حماسه چهار ساله پس رفت</h2>
                     <p></p>
