--- a/intl/international.html
+++ b/intl/international.html
@@ -63,6 +63,15 @@
                     <img src="intlimages/Covid-study.webp" alt="مقاله ۱" />
                 </a>
                 </div>
+
+                <div class="article-container">
+
+                    <a href="intlarticles/Expert-Advice-On-Anti-Depressents.html" class="article">
+                        <h2>ترک داروهای ضد افسردگی</h2>
+                        <p></p>
+                        <img src="intlimages/HarvardArticle.jpg" alt="مقاله ۱" />
+                    </a>
+                    </div>
         <div class="article-container">
 
         <a href="intlarticles/IntlArt1.html" class="article">
